# Size-Table-Generator

./: README.md  package.json
.github/workflows/: main.yaml
src/: App.css  App.tsx  Layout.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/phdb-translate/: Cargo.toml
src-tauri/phdb-translate/src/: error.rs  lib.rs
src-tauri/src/: config.rs  custom_command.rs  main.rs  translate.rs
src/components/: StatusPanel.tsx
src/components/ControlPanel/: Button.tsx  OpenExcelFile.tsx  SavePics.tsx  SelectSaveDir.tsx  index.tsx
src/components/Preview/: ListItem.tsx  ListView.tsx  SizeTable.tsx  Table.tsx  index.tsx
src/lib/: saveFile.ts  store.ts  utility.ts
src/styles/: Color.ts  animation.ts
src/styles/styleAtoms/: Button.ts  ColumnFlexWrapper.ts  RowFlexWrapper.ts  Table.ts
src/types/: index.ts
