[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0", features = ["api-all"] }
calamine = "0.18.0"
deepl-api = "0.2.1"
itertools = "0.10.1"
rayon = "1.5.1"
phdb-translate = {path = "./phdb-translate"}

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
