[package]
name = "phdb-translate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gcp_auth = "0.7.3"
reqwest = {version = "0.11.11",default-features =false ,features = ["json","blocking"]}
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.31"
tracing = "0.1.35"

[dev-dependencies]
dotenv = "0.15.0"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
tokio = { version = "1.19.2", features = ["full"] }
